--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jade": "0.19",
     "async": "0.1",
     "connect-redis": "1.2",
-    "uglify-js2": "git://github.com/mishoo/UglifyJS2.git#master"
+    "uglify-js": "2"
   },
   "dev-dependencies": {
     "soda": "0.2.5",
