Update express to v3.x Update to node.js v0.10.x support Change frontend/grunt-contrib-jade to use maritz/grunt-contrib-jade for multi_file support Update frontend/grunt to 4.x from 4.0 (fixes a dependency bug with node.js v0.10) Remove server/{stylus,nib,jade,uglify} dependencies

--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
     "socket.io": "0.8",
     "nohm": "0.9",
     "redis": "0.7",
-    "express": "2.5",
-    "stylus": "0.20",
-    "nib": "0.3",
-    "jade": "0.19",
+    "express": "3",
     "async": "0.1",
-    "connect-redis": "1.2",
-    "uglify-js": "2"
+    "connect-redis": "1"
   },
   "devDependencies": {
     "soda": "0.2.5",
