--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.0",
+    "grunt": "~0.4",
     "grunt-contrib-copy": "~0.4.0",
     "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-uglify": "~0.2",
@@ -22,7 +22,7 @@
     "grunt-open": "~0.2.0",
     "matchdep": "~0.1.1",
     "grunt-contrib-stylus": "0.4",
-    "grunt-contrib-jade": "0.5"
+    "grunt-contrib-jade": "https://github.com/maritz/grunt-contrib-jade/tarball/master"
   },
   "engines": {
     "node": ">=0.8.0"
